# AdWard

./: .dockerignore  CMakeLists.txt  README.md  adwardAPI.cpp  adwardAPI.h  conanfile.txt  requirements.txt  test_blocking.py
GUI/: AdWardGUI.spec  adwardAPI.cpp  adwardAPI.h  adward_API.py  config.py  config_dialog.py  frontPage.cpp  frontPage.h  frontPage.py  front_page.py  main.cpp  main.py
VirusTotal/: CheckTop50Websites.py  VirusTotal.py  requirements.txt  response.txt  top50websites.txt
etc/: adward.conf  allow_list.txt  requirements.txt
logs/: dns_requests.csv
main/: logging_config.py  server.py  update_block_lists.py
scapy/: collectedDNS.txt  scapy_test.py  scapy_test_dns.py
